# Racoon-Typper

./: .gitignore  AUDIT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE  PERFORMANCE_BENCHMARK.md  PERFORMANCE_REPORT.md  PKGBUILD  README.md  RELEASE_AUDIT.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v1.1.md  ROADMAP_v1.1.md  ROADMAP_v1.2.md  TECH_DEBT.md  build-appimage.sh  com.racoon.typper.json  racoon-typper.desktop
.github/workflows/: ci.yml
crates/app/: Cargo.toml  tauri.conf.json
crates/app/capabilities/: main.json
crates/app/src/: commands.rs  error.rs  main.rs  state.rs
crates/core/: Cargo.toml
crates/core/src/: adaptive.rs  analytics.rs  burst.rs  consistency.rs  engine.rs  finger_map.rs  input.rs  lesson.rs  lib.rs  replay.rs  sound.rs  stats.rs  streaks.rs  typing.rs  viewport.rs  weak_keys.rs
crates/core/src/modes/: custom.rs  mod.rs  quote.rs  time.rs  words.rs
crates/core/tests/: e2e_lifecycle.rs
crates/data/: Cargo.toml
crates/data/migrations/: V001__initial.sql  V002__lesson_language.sql  V003__replays.sql
crates/data/src/: db.rs  error.rs  lib.rs  models.rs
crates/data/src/repository/: custom_texts.rs  daily_stats.rs  lesson.rs  mod.rs  personal_bests.rs  replays.rs  settings.rs  tests.rs
crates/data/tests/: db_validation.rs  migration_and_perf.rs
crates/domain/: Cargo.toml
crates/domain/src/: engine.rs  ids.rs  keyboard.rs  lesson.rs  lib.rs  settings.rs  stats.rs  test.rs  theme.rs
crates/resources/: Cargo.toml
crates/resources/src/: courses.rs  lib.rs  quotes.rs  words.rs
frontend/: index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  app.css
frontend/src/components/: AchievementGallery.svelte  AnalyticsView.svelte  BestsView.svelte  CustomTextsView.svelte  DashboardView.svelte  HandPositionGuide.svelte  HistoryView.svelte  KeyboardHeatmap.svelte  KeyboardTrainer.svelte  KeyboardVizComponent.svelte  LessonListView.svelte  ModeSelector.svelte  NavigationBar.svelte  NotificationStack.svelte  ProgressChart.svelte  ReplayView.svelte  ResultOverlay.svelte  SettingsView.svelte  TestView.svelte  TypingWarnings.svelte  (+1 more)
resources/courses/: cs.toml  de.toml  en.toml  es.toml  fr.toml  it.toml  ja.toml  ko.toml  pl.toml  pt.toml  ro.toml  ru.toml  uk.toml  zh-hk.toml  zh-tw.toml
resources/quotes/: cs.toml  de.toml  en.toml  es.toml  fr.toml  it.toml  ja.toml  ko.toml  pl.toml  pt.toml  ro.toml  ru.toml  uk.toml  zh-hk.toml  zh-tw.toml
resources/words/: cs.txt  de.txt  en.txt  es.txt  fr.txt  it.txt  ja.txt  ko.txt  pl.txt  pt.txt  ro.txt  ru.txt  uk.txt  zh-hk.txt  zh-tw.txt
(+27 files in other folders)
