[workspace]
resolver = "2"
members = [
    "crates/domain",
    "crates/core",
    "crates/data",
    "crates/resources",
    "crates/app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Racoon Typper Contributors"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Workspace internal deps
racoon-domain = { path = "crates/domain" }
racoon-core = { path = "crates/core" }
racoon-data = { path = "crates/data" }
racoon-resources = { path = "crates/resources" }

# Shared deps
chrono = "0.4"

[profile.release]
strip = true
lto = "thin"