[package]
name = "racoon-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
racoon-domain = { workspace = true }
racoon-core = { workspace = true }
racoon-data = { workspace = true }
racoon-resources = { workspace = true }
tauri = { version = "2", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = "0.4"
dirs = "5"

[build-dependencies]
tauri-build = { version = "2", features = [] }
