[package]
name = "racoon-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
racoon-domain = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
racoon-data = { workspace = true }
chrono = { workspace = true }