[package]
name = "racoon-data"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
racoon-domain = { workspace = true }
rusqlite = { version = "0.31", features = ["bundled"] }
refinery = { version = "0.8", features = ["rusqlite"] }
chrono = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }